<resources>
    <string name="app_name">YourTable</string>
    <string name="greeting_text" translatable="false">Book your table!</string>

    <string name="qr_scanner_title">ABA Scan QR</string>
    <string name="qr_scanner_subtitle">Scan QR</string>
    <string name="qr_scanner_instruction">Align Frame with QR Code</string>
    <string name="qr_pay_manually">PAY MANUALLY</string>

    <string name="aba_mobile">ABA Mobile</string>

    <!-- Bottom Navigations -->
    <string name="restaurants">Restaurants</string>
    <string name="reservations">Reservations</string>
    <string name="account">Account</string>

    <!-- Main Activity -->
    <string name="menu">Menu</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Log Out</string>

    <!-- Restaurants Lists -->
    <string-array name="restaurants">
        <item>One More</item>
        <item>Simply Delicious</item>
        <item>Pepper Lunch</item>
        <item>Burger King</item>
        <item>Brown</item>
        <item>Starbucks</item>
        <item>Lucky Burger</item>
        <item>Kobe</item>


    </string-array>

    <string-array name="descriptions">
        <item>Khmer-Thai Restaurant</item>
        <item>Thai Restaurant</item>
        <item>Western Restaurant</item>
        <item>Fastfood</item>
        <item>Coffee Shop</item>
        <item>Coffee Shop</item>
        <item>Fastfood</item>
        <item>Japanese Restaurant</item>
    </string-array>

    <!-- Dashboard -->
    <string name="dashboard_title">ABA Mobile</string>
    <string name="accounts">Account</string>
    <string name="transfers">Transfers</string>
    <string name="payments">Payments</string>
    <string name="deposit">Deposit</string>
    <string name="cash_to_atm">Cash to ATM</string>
    <string name="virtual_card">Virtual Card</string>
    <string name="scan_qr">Scan QR</string>
    <string name="loans">Loans</string>
    <string name="aba_locator">ABA Locator</string>

    <string name="quick_transfer">Quick Transfer</string>
    <string name="quick_transfer_description">Create your template here to make transfer quicker</string>

    <string name="quick_payment">Quick Payment</string>
    <string name="quick_payment_description">Paying your bill with templates is faster</string>
    <string name="title_activity_nav_bar">NavBar</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="find_your_restaurant">Find Your Restaurant</string>
</resources>
